# ChangeLog for net-p2p/mldonkey
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/mldonkey/ChangeLog,v 1.24 2003/11/30 21:26:51 jbms Exp $

  30 Nov 2003; Jeremy Maitin-Shepard <jbms@gentoo.org>
  mldonkey-2.5.3-r1.ebuild, mldonkey-2.5.3-r2.ebuild, mldonkey-2.5.4.ebuild:
  Changed `either' to 'also' in the post-install message.
  Bug reported by Adam <adam@tpetaccia.com>.

  19 Nov 2003; Heinrich Wendel <lanius@gentoo.org> mldonkey-2.5.4.ebuild:
  inherit eutils to fix enewuser, thx to iggy for pointing that out

  18 Oct 2003; Heinrich Wendel <lanius@gentoo.org> mldonkey-2.5.4.ebuild:
  fixed compiling with ocaml 3.07

*mldonkey-2.5.4 (17 Oct 2003)

  17 Oct 2003; Heinrich Wendel <lanius@gentoo.org> mldonkey-2.5-r1.ebuild,
  mldonkey-2.5.4.ebuild, files/mldonkey:
  version bump / --enable-batch mode / additionaly docs / bug #30983 / bug #31228

  07 Oct 2003; Martin Holzer <mholzer@gentoo.org> mldonkey-2.5.3-r1.ebuild,
  mldonkey-2.5.3-r2.ebuild:
  fixing ocml version. closes #29996

*mldonkey-2.5.3-r2 (24 Sep 2003)

  24 Sep 2003; Markus Nigbur <pyrania@gentoo.org> mldonkey-2.5.3-r2.ebuild,
  files/mldonkey.initd:
  Bugfixes in the initscript (bug #29374)

  10 Sep 2003; Caleb Tennis <caleb@gentoo.org> mldonkey-2.5.3-r1.ebuild:
  Rethink the config files - bug #27005

  17 Aug 2003; Martin Holzer <mholzer@gentoo.org> mldonkey-2.5.3-r1.ebuild:
  Marked x86 stable.

*mldonkey-2.5.3-r1 (06 Aug 2003)

  06 Aug 2003; Caleb Tennis <caleb@gentoo.org> mldonkey-2.5.3-r1.ebuild:
  Added extra functionality, like a new p2p user and some added features.
  Thanks to Julian Hoch, this closes bug #25695.

*mldonkey-2.5.3 (17 Jun 2003)

  17 Jun 2003; Caleb Tennis <caleb@gentoo.org> mldonkey-2.5.3.ebuild:
  Version bump to 2.5-3.  E-Build submitted by Gregorio Guidi (bug #22605).

*mldonkey-2.5-r1 (02 Jun 2003)
