@@ -1,8 +1,8 @@
 MD5 e8dfdf0b76faaee7613a9b4b65d5a6c3 mldonkey-2.5.3-r2.ebuild 2626
 MD5 cb323c6d5864e01b2e42613214648605 mldonkey-2.02-r1.ebuild 2213
-MD5 f379c7ddacd1ab01ca0b5580da43431a mldonkey-2.5.4.ebuild 2390
+MD5 2c26266d625b48333e44798df3b7d609 mldonkey-2.5.4.ebuild 2376
 MD5 fdc56ed5ba0b8de242df45b3a16211be mldonkey-2.5.3-r1.ebuild 2626
-MD5 b12b9d9f9a5c81d9b18646c247637d6a ChangeLog 4161
+MD5 778ec34ade51a7c281100cdec52cd6d7 ChangeLog 4381
 MD5 2aece486034a2d8ff26aa5ec7489bfc2 metadata.xml 398
 MD5 cc820f9d66d277f2cd46ef750e918807 files/digest-mldonkey-2.5.3-r1 75
 MD5 cc820f9d66d277f2cd46ef750e918807 files/digest-mldonkey-2.5.3-r2 75
